--- a/index.html
+++ b/index.html
@@ -240,10 +240,10 @@
 				hours themselves building, modeling, programming, and competing at tournaments with teams from around the
 				world.
 			</p>
-      <div class="columns">
-    		<!-- <div class="column">
-          TODO: insert Iowa photo
-        </div> -->
+      <div class="columns is-vcentered">
+    		<div class="column">
+          <img src="img/iowa.jpg">
+        </div>
         <div class="column">
           <img src="img/bs-cnc.jpg">
         </div>
