--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				</h2>
 				<h2 class="subtitle">
 					<strong>
-						July 15 to July 26 • Monday-Friday • 9:00AM-1:00PM
+						July 15 to July 26 • Monday-Friday • Register by July 9th
 					</strong>
 				</h2>
 				<h2 class="subtitle">
@@ -68,19 +68,26 @@
 				</h2>
 				<h2 class="subtitle">
 					<strong>
-						9-13 years old • Class size of 15 • Register by July 9th
+						7-13 years old • Session size of 15
 					</strong>
 				</h2>
-				<a class="button is-link is-medium" href="#register" id="volbtn">
+				<a class="button is-link is-large" href="#register" id="volbtn">
 					<span>
 						Register Now
 					</span>
 				</a>
+        <br>
+        <br>
 				<h2 class="subtitle">
 					<strong>
 						Limited spots remain, register now!
 					</strong>
 				</h2>
+        <a class="button is-link is-medium" href="#details">
+					<span>
+						Details
+					</span>
+				</a>
 			</div>
 			<div class="container has-text-centered is-hidden-mobile">
 				<br />
@@ -103,7 +110,7 @@
 			<div class="level-item has-text-centered">
 				<div>
 					<p class="heading">
-						Max Class Size
+						Max Session Size
 					</p>
 					<p class="title">
 						15
@@ -349,14 +356,57 @@
 			</section>
 		</div>
 	</section>
+  <section class="section has-text-centered">
+    <a name="details">
+    </a>
+		<div class="container">
+			<h1 class="title">
+				Schedule
+			</h1>
+			<h2 class="subtitle">
+				Email <code>camp@irvingtonrobotics.org</code> if you have any questions.
+			</h2>
+			<table class="table is-fullwidth is-striped is-hoverable">
+				<tr>
+					<th>
+						Session 1
+					</th>
+          <th>
+            Session 2
+          </th>
+				</tr>
+				<tr>
+          <td>
+            Ages 10-13
+          </td>
+					<td>
+						Ages 7-9
+					</td>
+				</tr>
+        <tr>
+          <td>
+            9:00AM to 1:00PM
+          </td>
+          <td>
+            2:00PM to 5:00PM
+          </td>
+        </tr>
+        <tr>
+          <td>
+            July 15 to July 26
+          </td>
+          <td>
+            July 15 to July 26
+          </td>
+        </tr>
+			</table>
+		</div>
+	</section>
 	<section class="section has-text-centered">
 		<div class="container">
 			<h1 class="title">
 				Tuition Structure
 			</h1>
-			<h2 class="subtitle">
-				Email <code>camp@irvingtonrobotics.org</code> if you have any questions.
-			</h2>
 			<table class="table is-fullwidth is-striped is-hoverable">
 				<tr>
 					<th>
