--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				</h2>
 				<h2 class="subtitle">
 					<strong>
-						7-13 years old • Session size of 15
+						7-13 years old • 3:1 student-teacher Ratio
 					</strong>
 				</h2>
 				<a class="button is-link is-large" href="#register" id="volbtn">
@@ -375,14 +375,6 @@
             Session 2
           </th>
 				</tr>
-				<tr>
-          <td>
-            Ages 10-13
-          </td>
-					<td>
-						Ages 7-9
-					</td>
-				</tr>
         <tr>
           <td>
             9:00AM to 1:00PM
@@ -391,15 +383,9 @@
             2:00PM to 5:00PM
           </td>
         </tr>
-        <tr>
-          <td>
-            July 15 to July 26
-          </td>
-          <td>
-            July 15 to July 26
-          </td>
-        </tr>
 			</table>
+      The age groups <b> 7-9 </b> and <b> 10-13 </b> will be separated.
+      Maximum session size of <b> 15 </b>.
 		</div>
 	</section>
 	<section class="section has-text-centered">
