--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				</h2>
 				<h2 class="subtitle">
 					<strong>
-						7-13 years old • 3:1 student-teacher Ratio
+						7-13 years old • 3:1 student-teacher ratio
 					</strong>
 				</h2>
 				<a class="button is-link is-large" href="#register" id="volbtn">
