Clarify sessions more

--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 			<h2 class="subtitle">
 				Email <code>camp@irvingtonrobotics.org</code> if you have any questions.
 			</h2>
-			<table class="table is-fullwidth is-striped is-hoverable">
+			<table class="table is-hcentered is-striped is-hoverable">
 				<tr>
 					<th>
 						Session 1
@@ -384,8 +384,10 @@
           </td>
         </tr>
 			</table>
-      The age groups <b> 7-9 </b> and <b> 10-13 </b> will be separated.
-      Maximum session size of <b> 15 </b>.
+      <br/>
+      Student will be split by age and skill to learn in separate groups.
+      <br/>
+      Maximum session size of <b>15</b>.
 		</div>
 	</section>
 	<section class="section has-text-centered">
@@ -393,7 +395,7 @@
 			<h1 class="title">
 				Tuition Structure
 			</h1>
-			<table class="table is-fullwidth is-striped is-hoverable">
+			<table class="table is-hcentered is-striped is-hoverable">
 				<tr>
 					<th>
 						Camp Tuition
