--- a/index.html
+++ b/index.html
@@ -51,49 +51,66 @@
 			</nav>
 		</div>
 		<div class="hero-body">
-			<div class="container has-text-centered">
-				<img class="is-hidden-mobile" src="img/logo-white.svg" width="70%" />
-				<h2 class="subtitle">
-					Build, program, 3D-model, and take home your very own automatic obstacle-avoiding, object-tracking smartcar!
-				</h2>
-				<h2 class="subtitle">
-					<strong>
-						July 15 to July 26 • Monday-Friday • Register by July 9th
-					</strong>
-				</h2>
-				<h2 class="subtitle">
-					<strong>
-						Nurture Kids Warm Springs • 46517 Mission Blvd, Fremont, CA 94539
-					</strong>
-				</h2>
-				<h2 class="subtitle">
-					<strong>
-						7-13 years old • 3:1 student-teacher ratio
-					</strong>
-				</h2>
-				<a class="button is-link is-large" href="#register" id="volbtn">
-					<span>
-						Register Now
-					</span>
-				</a>
-        <br>
-        <br>
-				<h2 class="subtitle">
-					<strong>
-						Limited spots remain, register now!
-					</strong>
-				</h2>
-        <a class="button is-link is-medium" href="#details">
-					<span>
-						Details
-					</span>
-				</a>
-			</div>
-			<div class="container has-text-centered is-hidden-mobile">
-				<br />
-				<img src="img/presentedby_ihs_v2.svg" width="15%" />
-			</div>
-		</div>
+      <div class="columns is-desktop is-vcentered">
+        <div class="column is-6-desktop is-offset-1-desktop">
+    			<div class="has-text-centered">
+    				<img class="is-hidden-mobile" src="img/logo-white.svg" width="70%" />
+    				<h2 class="subtitle">
+    					Build, program, 3D-model, and take home your very own automatic obstacle-avoiding, object-tracking smartcar!
+    				</h2>
+    				<h2 class="subtitle">
+    					<strong>
+    						July 15 to July 26 • Monday-Friday • Register by July 9th
+    					</strong>
+    				</h2>
+    				<h2 class="subtitle">
+    					<strong>
+    						Nurture Kids Warm Springs • 46517 Mission Blvd, Fremont, CA 94539
+    					</strong>
+    				</h2>
+    				<h2 class="subtitle">
+    					<strong>
+    						7-13 years old • 3:1 student-teacher ratio
+    					</strong>
+    				</h2>
+    				<a class="button is-link is-large" href="#register" id="volbtn">
+    					<span>
+    						Register Now
+    					</span>
+    				</a>
+            <br>
+            <br>
+    				<h2 class="subtitle">
+    					<strong>
+    						Limited spots remain, register now!
+    					</strong>
+    				</h2>
+            <a class="button is-link is-medium" href="#details">
+    					<span>
+    						Details
+    					</span>
+    				</a>
+    			</div>
+    			<div class="has-text-centered is-hidden-mobile">
+    				<br/>
+    				<img src="img/presentedby_ihs_v2.svg" width="15%" />
+    			</div>
+    		</div>
+        <div class="column is-4-desktop is-offset-1-desktop is-8-tablet is-offset-2-tablet">
+          <article class="message is-info">
+            <div class="message-header">
+              <p>Info: Expansion</p>
+            </div>
+            <div class="message-body">
+              Due to growing demand, we are partnering with Genius Kids to host a second summer camp in late July/August.
+              If you are interested in attending our summer camp at Genius Kids, please fill out
+              <a> this student interest form</a>.
+              The dates, pricing, and other details will be released shortly.
+            </div>
+          </article>
+        </div>
+      </div>
+    </div>
 	</section>
 	<section class="section has-text-centered has-text-black">
 		<nav class="level">
@@ -395,40 +412,49 @@
 			<h1 class="title">
 				Tuition Structure
 			</h1>
-			<table class="table is-hcentered is-striped is-hoverable">
-				<tr>
-					<th>
-						Camp Tuition
-					</th>
-					<td>
-						$165.02
-					</td>
-				</tr>
-				<tr>
-					<th>
-						Kit Cost
-					</th>
-					<td>
-						$84.98
-					</td>
-				</tr>
-				<tr>
-					<th>
-						Lunch (optional)
-					</th>
-					<td>
-						$8 per day of camp
-					</td>
-				</tr>
-				<tr class="is-selected has-background-info">
-					<th>
-						Total Tuition
-					</th>
-					<th>
-						$250.00 or $330.00 with lunch
-					</th>
-				</tr>
-			</table>
+      <div class="columns">
+        <div class="column is-5">
+          <h3 class="title is-4"> Nurture Kids <h3>
+    			<table class="table is-hcentered is-striped is-hoverable">
+    				<tr>
+    					<th>
+    						Camp Tuition
+    					</th>
+    					<td>
+    						$165.02
+    					</td>
+    				</tr>
+    				<tr>
+    					<th>
+    						Kit Cost
+    					</th>
+    					<td>
+    						$84.98
+    					</td>
+    				</tr>
+    				<tr>
+    					<th>
+    						Lunch (optional)
+    					</th>
+    					<td>
+    						$8 per day of camp
+    					</td>
+    				</tr>
+    				<tr class="is-selected has-background-info">
+    					<th>
+    						Total Tuition
+    					</th>
+    					<th>
+    						$250.00 or $330.00 with lunch
+    					</th>
+    				</tr>
+    			</table>
+        </div>
+        <div class="column is-5 is-offset-2">
+          <h3 class="title is-4"> Genius Kids <h3>
+          Pricing for the Genius Kids camp is coming soon!
+        </div>
+      </div>
 		</div>
 	</section>
 	<hr>
@@ -449,59 +475,76 @@
 			</h2>
 		</div>
 		<br />
-		<div class="container">
-			<h2 class="title is-4">
-				Step 1: Fill Out Student Information Form
-			</h2>
-			<p>
-				Fill out
-				<a
-					href="https://docs.google.com/forms/d/e/1FAIpQLSef-Z8XUCSDe_XGCZ6Lt2ZZui9RDS98ANA7ZL-A7REyLs87WQ/viewform?usp=sf_link">
-					this form</a>.
-			</p>
-		</div>
-		<br />
-		<div class="container">
-			<h2 class="title is-4">
-				Step 2: Fill Out Nurture Kids Registration Packet
-			</h2>
-			<p>
-				Fill out
-				<a href="assets/Arduino-Robotics-Registration-Packet-2019.pdf">
-					this registration packet</a>.
-			</p>
-			<p>
-				The completed and signed physical packet may be dropped off at
-				<a href="https://goo.gl/maps/SXCVYp46S9S2">
-					46517 Mission Blvd, Fremont, CA 94539
-				</a>
-				<strong>
-					or
-				</strong>
-				you may email the completed and signed packet to
-				<code>camp@irvingtonrobotics.org</code>.
-			</p>
-		</div>
-		<br />
-		<div class="container">
-			<h2 class="title is-4">
-				Step 3: Submit Tuition
-			</h2>
-			<p>
-				Submit a check payable to
-				<strong>
-					VipArya Inc.
-				</strong>
-				to
-				<a href="https://goo.gl/maps/SXCVYp46S9S2">
-					Nurture Kids Warm Springs
-				</a>
-				by July 9th.
-			</p>
-			<p>
-				The camp is $250.00 without lunch and $330.00 with lunch.
-			</p>
-		</div>
+    <div class="container">
+      <div class="columns">
+        <div class="column is-5">
+          <h4 class="title is-4 has-text-centered">
+            Nurture Kids
+          </h4>
+      		<div class="">
+      			<h5 class="title is-5">
+      				Step 1: Fill Out Student Information Form
+      			</h5>
+      			<p>
+      				Fill out
+      				<a
+      					href="https://docs.google.com/forms/d/e/1FAIpQLSef-Z8XUCSDe_XGCZ6Lt2ZZui9RDS98ANA7ZL-A7REyLs87WQ/viewform?usp=sf_link">
+      					this form</a>.
+      			</p>
+      		</div>
+      		<br />
+      		<div class="">
+      			<h5 class="title is-5">
+      				Step 2: Fill Out Nurture Kids Registration Packet
+      			</h5>
+      			<p>
+      				Fill out
+      				<a href="assets/Arduino-Robotics-Registration-Packet-2019.pdf">
+      					this registration packet</a>.
+      			</p>
+      			<p>
+      				The completed and signed physical packet may be dropped off at
+      				<a href="https://goo.gl/maps/SXCVYp46S9S2">
+      					46517 Mission Blvd, Fremont, CA 94539
+      				</a>
+      				<strong>
+      					or
+      				</strong>
+      				you may email the completed and signed packet to
+      				<code>camp@irvingtonrobotics.org</code>.
+      			</p>
+      		</div>
+      		<br />
+      		<div class="">
+      			<h5 class="title is-5">
+      				Step 3: Submit Tuition
+      			</h5>
+      			<p>
+      				Submit a check payable to
+      				<strong>
+      					VipArya Inc.
+      				</strong>
+      				to
+      				<a href="https://goo.gl/maps/SXCVYp46S9S2">
+      					Nurture Kids Warm Springs
+      				</a>
+      				by July 9th.
+      			</p>
+      			<p>
+      				The camp is $250.00 without lunch and $330.00 with lunch.
+      			</p>
+      		</div>
+        </div>
+        <div class="column is-5 is-offset-2 has-text-centered">
+          <h4 class="title is-4 has-text-centered">
+            Genius Kids
+          </h4>
+      		<p>
+            Registration for the Genius Kids camp is coming soon!
+          </p>
+        </div>
+      </div>
+    </div>
 	</section>
 	<br />
 	<footer class="footer is-branded has-text-white">
