Improve hero text contrast
Necessary due to message shifting text to left (harder contrast there)

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     						7-13 years old • 3:1 student-teacher ratio
     					</strong>
     				</h2>
-    				<a class="button is-link is-large" href="#register" id="volbtn">
+    				<a class="button is-link is-large has-no-textshadow" href="#register" id="volbtn">
     					<span>
     						Register Now
     					</span>
@@ -85,7 +85,7 @@
     						Limited spots remain, register now!
     					</strong>
     				</h2>
-            <a class="button is-link is-medium" href="#details">
+            <a class="button is-link is-medium has-no-textshadow" href="#details">
     					<span>
     						Details
     					</span>
@@ -97,7 +97,7 @@
     			</div>
     		</div>
         <div class="column is-4-desktop is-offset-1-desktop is-8-tablet is-offset-2-tablet">
-          <article class="message is-info">
+          <article class="message is-info has-no-textshadow">
             <div class="message-header">
               <p>Info: Expansion</p>
             </div>
