Add link to form

--- a/index.html
+++ b/index.html
@@ -104,7 +104,8 @@
             <div class="message-body">
               Due to growing demand, we are partnering with Genius Kids to host a second summer camp in late July/August.
               If you are interested in attending our summer camp at Genius Kids, please fill out
-              <a> this student interest form</a>.
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLScxV-VXymFFife2kt-7wyo42yYndOD0Si4KWvBQNk5erphwTg/viewformk">
+                this student interest form</a>.
               The dates, pricing, and other details will be released shortly.
             </div>
           </article>
