Add Genius Kids Logo to expansion

--- a/index.html
+++ b/index.html
@@ -52,7 +52,24 @@
 		</div>
 		<div class="hero-body">
       <div class="columns is-desktop is-vcentered">
-        <div class="column is-6-desktop is-offset-1-desktop">
+        <div class="column is-4-desktop is-offset-1-desktop is-8-tablet is-offset-2-tablet">
+          <article class="message is-info has-no-textshadow is-relative-root">
+            <div class="message-header">
+              <p>Info: Expansion</p>
+            </div>
+            <div class="message-body">
+              Due to growing demand, we are partnering with Genius Kids to host a second summer camp in late July/August.
+              If you are interested in attending our summer camp at Genius Kids, please fill out
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLScxV-VXymFFife2kt-7wyo42yYndOD0Si4KWvBQNk5erphwTg/viewform">
+                this student interest form</a>.
+              The dates, pricing, and other details will be released shortly.
+            </div>
+            <div class="corner-icon is-top-right">
+              <img src="img/genius-kids.png" width=100 class="image-pop">
+            </div>
+          </article>
+        </div>
+        <div class="column is-6-desktop is-8-touch is-offset-2-touch">
     			<div class="has-text-centered">
     				<img class="is-hidden-mobile" src="img/logo-white.svg" width="70%" />
     				<h2 class="subtitle">
@@ -96,20 +113,6 @@
     				<img src="img/presentedby_ihs_v2.svg" width="15%" />
     			</div>
     		</div>
-        <div class="column is-4-desktop is-offset-1-desktop is-8-tablet is-offset-2-tablet">
-          <article class="message is-info has-no-textshadow">
-            <div class="message-header">
-              <p>Info: Expansion</p>
-            </div>
-            <div class="message-body">
-              Due to growing demand, we are partnering with Genius Kids to host a second summer camp in late July/August.
-              If you are interested in attending our summer camp at Genius Kids, please fill out
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLScxV-VXymFFife2kt-7wyo42yYndOD0Si4KWvBQNk5erphwTg/viewform">
-                this student interest form</a>.
-              The dates, pricing, and other details will be released shortly.
-            </div>
-          </article>
-        </div>
       </div>
     </div>
 	</section>
