Fix indentation and rearrange page

--- a/index.html
+++ b/index.html
@@ -51,70 +51,64 @@
 			</nav>
 		</div>
 		<div class="hero-body">
-      <div class="columns is-desktop is-vcentered">
-        <div class="column is-4-desktop is-offset-1-desktop is-8-tablet is-offset-2-tablet">
-          <article class="message is-info has-no-textshadow is-relative-root">
-            <div class="message-header">
-              <p>Info: Expansion</p>
-            </div>
-            <div class="message-body">
-              Due to growing demand, we are partnering with Genius Kids to host a second summer camp in late July/August.
-              If you are interested in attending our summer camp at Genius Kids, please fill out
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLScxV-VXymFFife2kt-7wyo42yYndOD0Si4KWvBQNk5erphwTg/viewform">
-                this student interest form</a>.
-              The dates, pricing, and other details will be released shortly.
-            </div>
-            <div class="corner-icon is-top-right">
-              <img src="img/genius-kids.png" width=100 class="image-pop">
-            </div>
-          </article>
-        </div>
-        <div class="column is-6-desktop is-8-touch is-offset-2-touch">
-    			<div class="has-text-centered">
-    				<img class="is-hidden-mobile" src="img/logo-white.svg" width="70%" />
-    				<h2 class="subtitle">
-    					Build, program, 3D-model, and take home your very own automatic obstacle-avoiding, object-tracking smartcar!
-    				</h2>
-    				<h2 class="subtitle">
-    					<strong>
-    						July 15 to July 26 • Monday-Friday • Register by July 9th
-    					</strong>
-    				</h2>
-    				<h2 class="subtitle">
-    					<strong>
-    						Nurture Kids Warm Springs • 46517 Mission Blvd, Fremont, CA 94539
-    					</strong>
-    				</h2>
-    				<h2 class="subtitle">
-    					<strong>
-    						7-13 years old • 3:1 student-teacher ratio
-    					</strong>
-    				</h2>
-    				<a class="button is-link is-large has-no-textshadow" href="#register" id="volbtn">
-    					<span>
-    						Register Now
-    					</span>
-    				</a>
-            <br>
-            <br>
-    				<h2 class="subtitle">
-    					<strong>
-    						Limited spots remain, register now!
-    					</strong>
-    				</h2>
-            <a class="button is-link is-medium has-no-textshadow" href="#details">
-    					<span>
-    						Details
-    					</span>
-    				</a>
-    			</div>
-    			<div class="has-text-centered is-hidden-mobile">
-    				<br/>
-    				<img src="img/presentedby_ihs_v2.svg" width="15%" />
-    			</div>
-    		</div>
-      </div>
-    </div>
+			<div class="columns is-desktop is-vcentered">
+				<div class="column">
+					<div class="has-text-centered">
+						<img class="is-hidden-mobile" src="img/logo-white.svg" width="70%" />
+						<h2 class="subtitle">
+							Build, program, 3D-model, and take home your very own automatic obstacle-avoiding, object-tracking
+							smartcar!
+						</h2>
+						<h2 class="subtitle">
+							<strong>
+								July 15 to July 26 • Monday-Friday • Register by July 9th
+							</strong>
+						</h2>
+						<h2 class="subtitle">
+							<strong>
+								Nurture Kids Warm Springs • 46517 Mission Blvd, Fremont, CA 94539
+							</strong>
+						</h2>
+						<h2 class="subtitle">
+							<strong>
+								7-13 years old • 3:1 student-teacher ratio • Limited spots available
+							</strong>
+						</h2>
+						<a class="button is-link is-large has-no-textshadow" href="#register" id="volbtn">
+							<span>
+								Register Now
+							</span>
+						</a>
+						<br>
+						<br>
+						<div style="max-width: 800px; margin: 0 auto;">
+							<article class="message is-info has-no-textshadow is-relative-root">
+								<div class="message-header">
+									<p>Info: Expansion</p>
+								</div>
+								<div class="message-body">
+									Due to growing demand, we are partnering with Genius Kids to host a second summer camp in late
+									July/August.
+									If you are interested in attending our summer camp at Genius Kids, please fill out
+									<strong><a
+											href="https://docs.google.com/forms/d/e/1FAIpQLScxV-VXymFFife2kt-7wyo42yYndOD0Si4KWvBQNk5erphwTg/viewform">
+											this student interest form</a></strong>.
+									The dates, pricing, and other details will be released shortly.
+								</div>
+								<div class="corner-icon is-top-right">
+									<img src="img/genius-kids.png" width=100 class="image-pop">
+								</div>
+							</article>
+						</div>
+						<br>
+					</div>
+					<div class="has-text-centered is-hidden-mobile">
+						<br />
+						<img src="img/presentedby_ihs_v2.svg" width="15%" />
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 	<section class="section has-text-centered has-text-black">
 		<nav class="level">
@@ -153,9 +147,9 @@
 	<section class="section has-text-centered is-branded">
 		<div class="container has-text-white">
 			<div class="columns is-vcentered">
-        <div class="column">
-          <img src="img/flyer.jpg" width="500"/>
-        </div>
+				<div class="column">
+					<img src="img/flyer.jpg" width="500" />
+				</div>
 				<div class="column">
 					<h1 class="title has-text-white">
 						Camp Curriculum
@@ -195,66 +189,66 @@
 			</div>
 		</div>
 	</section>
-  <section class="section has-text-centered is-branded">
-    <div class="container has-text-white">
-      <h1 class="title has-text-white">
-        Equipment Used
-      </h1>
-      <img src="img/equipment.jpg" width="300">
-      <br><br>
-      <div class="columns">
-        <div class="column">
-          <h2 class="subtitle">
-            <strong class="has-text-white">Robot Chassis</strong>
-          </h2>
-          <ul>
-            <li>2 x Gear Motor (1:48 torque gear ratio)</li>
-            <li>2 x High-quality Car Wheel</li>
-            <li>1 x Smart Car Chassis</li>
-            <li>2 x Pan-Tilt Boards</li>
-            <li>4 x Motor Fixing Bracket</li>
-            <li>2 x 14500 Lithium-Ion Batteries</li>
-            <li>1 x Hardware Set (screws, etc.)</li>
-            <li>1 x SG90 Servo</li>
-            <li>1 x Universal Wheel</li>
-          </ul>
-        </div>
+	<section class="section has-text-centered is-branded">
+		<div class="container has-text-white">
+			<h1 class="title has-text-white">
+				Equipment Used
+			</h1>
+			<img src="img/equipment.jpg" width="300">
+			<br><br>
+			<div class="columns">
+				<div class="column">
+					<h2 class="subtitle">
+						<strong class="has-text-white">Robot Chassis</strong>
+					</h2>
+					<ul>
+						<li>2 x Gear Motor (1:48 torque gear ratio)</li>
+						<li>2 x High-quality Car Wheel</li>
+						<li>1 x Smart Car Chassis</li>
+						<li>2 x Pan-Tilt Boards</li>
+						<li>4 x Motor Fixing Bracket</li>
+						<li>2 x 14500 Lithium-Ion Batteries</li>
+						<li>1 x Hardware Set (screws, etc.)</li>
+						<li>1 x SG90 Servo</li>
+						<li>1 x Universal Wheel</li>
+					</ul>
+				</div>
 
-        <div class="column">
-          <h2 class="subtitle">
-            <strong class="has-text-white">Microcontroller/Sensor Equipment</strong>
-          </h2>
-          <ul>
-            <li>1 x Arduino Uno R3</li>
-            <li>3 x 15 Pixel LED Board</li>
-            <li>1 x Ultrasonic Sensor (HC-SR04 Ultrasonic Sensor)</li>
-            <li>1 x Flame Sensor</li>
-            <li>2 x Photoresistor & Thermistor</li>
-            <li>3 x Potentiometer</li>
-            <li>1 x LCD1602</li>
-            <li>1 x Mini Remote Control</li>
-          </ul>
-        </div>
+				<div class="column">
+					<h2 class="subtitle">
+						<strong class="has-text-white">Microcontroller/Sensor Equipment</strong>
+					</h2>
+					<ul>
+						<li>1 x Arduino Uno R3</li>
+						<li>3 x 15 Pixel LED Board</li>
+						<li>1 x Ultrasonic Sensor (HC-SR04 Ultrasonic Sensor)</li>
+						<li>1 x Flame Sensor</li>
+						<li>2 x Photoresistor & Thermistor</li>
+						<li>3 x Potentiometer</li>
+						<li>1 x LCD1602</li>
+						<li>1 x Mini Remote Control</li>
+					</ul>
+				</div>
 
-        <div class="column">
-          <h2 class="subtitle">
-            <strong class="has-text-white">Circuit Equipment</strong>
-          </h2>
-          <ul>
-            <li>2 x Active Buzzer</li>
-            <li>20 x Resistors</li>
-            <li>4 x Buttons</li>
-            <li>2 x Mini Breadboards</li>
-            <li>1 x Battery Box</li>
-            <li>1 x Charger</li>
-            <li>1 x Mini Component Box</li>
-            <li>1 x 830-Hole Large Breadboard</li>
-            <li>2 X AA Batteries</li>
-          </ul>
-        </div>
-    </div>
-    </div>
-  </section>
+				<div class="column">
+					<h2 class="subtitle">
+						<strong class="has-text-white">Circuit Equipment</strong>
+					</h2>
+					<ul>
+						<li>2 x Active Buzzer</li>
+						<li>20 x Resistors</li>
+						<li>4 x Buttons</li>
+						<li>2 x Mini Breadboards</li>
+						<li>1 x Battery Box</li>
+						<li>1 x Charger</li>
+						<li>1 x Mini Component Box</li>
+						<li>1 x 830-Hole Large Breadboard</li>
+						<li>2 X AA Batteries</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
 	<section class="section has-text-centered is-branded has-text-white">
 		<div class="container">
 			<h1 class="title has-text-white">
@@ -269,14 +263,14 @@
 				world.
 			</p>
 			<br>
-      <div class="columns is-vcentered">
-    		<div class="column">
-          <img src="img/iowa.jpg">
-        </div>
-        <div class="column">
-          <img src="img/bs-cnc.jpg">
-        </div>
-      </div>
+			<div class="columns is-vcentered">
+				<div class="column">
+					<img src="img/iowa.jpg">
+				</div>
+				<div class="column">
+					<img src="img/bs-cnc.jpg">
+				</div>
+			</div>
 			<section>
 				<h4 class="title is-4 has-text-white">
 					Ansh Verma
@@ -306,7 +300,7 @@
 					Sandesh Shrestha
 				</h4>
 				<div class="columns">
-          <figure class="column is-narrow">
+					<figure class="column is-narrow">
 						<p class="image is-128x128 is-hcentered">
 							<img class="is-rounded" src="img/bios/sandesh.jpg">
 						</p>
@@ -321,7 +315,8 @@
 								using Linux, Java, and Computer-Aided-Design (CAD) through Autodesk Inventor. Additionally, I have ample
 								website design experience in HTML and CSS. Through this summer camp, I want to combine the vast
 								technological knowledge I have with my experience teaching robotics and managing teaching programs to
-								help students get interested in technology at a young age! Hobbies include playing guitar, violin, & piano,
+								help students get interested in technology at a young age! Hobbies include playing guitar, violin, &
+								piano,
 								playing PC games, building custom PCs, and drinking milk tea.
 							</p>
 						</div>
@@ -331,7 +326,7 @@
 					Patrick Ding
 				</h4>
 				<div class="columns">
-          <figure class="column is-narrow">
+					<figure class="column is-narrow">
 						<p class="image is-128x128 is-hcentered">
 							<img class="is-rounded" src="img/bios/patrick.jpg">
 						</p>
@@ -354,7 +349,7 @@
 					Vasant Chalemcherla
 				</h4>
 				<div class="columns">
-          <figure class="column is-narrow">
+					<figure class="column is-narrow">
 						<p class="image is-128x128 is-hcentered">
 							<img class="is-rounded" src="img/bios/vasant.jpg">
 						</p>
@@ -377,9 +372,9 @@
 			</section>
 		</div>
 	</section>
-  <section class="section has-text-centered">
-    <a name="details">
-    </a>
+	<section class="section has-text-centered">
+		<a name="details">
+		</a>
 		<div class="container">
 			<h1 class="title">
 				Schedule
@@ -392,23 +387,23 @@
 					<th>
 						Session 1
 					</th>
-          <th>
-            Session 2
-          </th>
+					<th>
+						Session 2
+					</th>
 				</tr>
-        <tr>
-          <td>
-            9:00AM to 1:00PM
-          </td>
-          <td>
-            2:00PM to 5:00PM
-          </td>
-        </tr>
+				<tr>
+					<td>
+						9:00AM to 1:00PM
+					</td>
+					<td>
+						2:00PM to 5:00PM
+					</td>
+				</tr>
 			</table>
-      <br/>
-      Student will be split by age and skill to learn in separate groups.
-      <br/>
-      Maximum session size of <b>15</b>.
+			<br />
+			Student will be split by age and skill to learn in separate groups.
+			<br />
+			Maximum session size of <b>15</b>.
 		</div>
 	</section>
 	<section class="section has-text-centered">
@@ -416,49 +411,49 @@
 			<h1 class="title">
 				Tuition Structure
 			</h1>
-      <div class="columns">
-        <div class="column is-5">
-          <h3 class="title is-4"> Nurture Kids <h3>
-    			<table class="table is-hcentered is-striped is-hoverable">
-    				<tr>
-    					<th>
-    						Camp Tuition
-    					</th>
-    					<td>
-    						$165.02
-    					</td>
-    				</tr>
-    				<tr>
-    					<th>
-    						Kit Cost
-    					</th>
-    					<td>
-    						$84.98
-    					</td>
-    				</tr>
-    				<tr>
-    					<th>
-    						Lunch (optional)
-    					</th>
-    					<td>
-    						$8 per day of camp
-    					</td>
-    				</tr>
-    				<tr class="is-selected has-background-info">
-    					<th>
-    						Total Tuition
-    					</th>
-    					<th>
-    						$250.00 or $330.00 with lunch
-    					</th>
-    				</tr>
-    			</table>
-        </div>
-        <div class="column is-5 is-offset-2">
-          <h3 class="title is-4"> Genius Kids <h3>
-          Pricing for the Genius Kids camp is coming soon!
-        </div>
-      </div>
+			<div class="columns">
+				<div class="column is-5">
+					<h3 class="title is-4"> Nurture Kids <h3>
+							<table class="table is-hcentered is-striped is-hoverable">
+								<tr>
+									<th>
+										Camp Tuition
+									</th>
+									<td>
+										$165.02
+									</td>
+								</tr>
+								<tr>
+									<th>
+										Kit Cost
+									</th>
+									<td>
+										$84.98
+									</td>
+								</tr>
+								<tr>
+									<th>
+										Lunch (optional)
+									</th>
+									<td>
+										$8 per day of camp
+									</td>
+								</tr>
+								<tr class="is-selected has-background-info">
+									<th>
+										Total Tuition
+									</th>
+									<th>
+										$250.00 or $330.00 with lunch
+									</th>
+								</tr>
+							</table>
+				</div>
+				<div class="column is-5 is-offset-2">
+					<h3 class="title is-4"> Genius Kids <h3>
+							Pricing for the Genius Kids camp is coming soon!
+				</div>
+			</div>
 		</div>
 	</section>
 	<hr>
@@ -479,76 +474,76 @@
 			</h2>
 		</div>
 		<br />
-    <div class="container">
-      <div class="columns">
-        <div class="column is-5">
-          <h4 class="title is-4 has-text-centered">
-            Nurture Kids
-          </h4>
-      		<div class="">
-      			<h5 class="title is-5">
-      				Step 1: Fill Out Student Information Form
-      			</h5>
-      			<p>
-      				Fill out
-      				<a
-      					href="https://docs.google.com/forms/d/e/1FAIpQLSef-Z8XUCSDe_XGCZ6Lt2ZZui9RDS98ANA7ZL-A7REyLs87WQ/viewform?usp=sf_link">
-      					this form</a>.
-      			</p>
-      		</div>
-      		<br />
-      		<div class="">
-      			<h5 class="title is-5">
-      				Step 2: Fill Out Nurture Kids Registration Packet
-      			</h5>
-      			<p>
-      				Fill out
-      				<a href="assets/Arduino-Robotics-Registration-Packet-2019.pdf">
-      					this registration packet</a>.
-      			</p>
-      			<p>
-      				The completed and signed physical packet may be dropped off at
-      				<a href="https://goo.gl/maps/SXCVYp46S9S2">
-      					46517 Mission Blvd, Fremont, CA 94539
-      				</a>
-      				<strong>
-      					or
-      				</strong>
-      				you may email the completed and signed packet to
-      				<code>camp@irvingtonrobotics.org</code>.
-      			</p>
-      		</div>
-      		<br />
-      		<div class="">
-      			<h5 class="title is-5">
-      				Step 3: Submit Tuition
-      			</h5>
-      			<p>
-      				Submit a check payable to
-      				<strong>
-      					VipArya Inc.
-      				</strong>
-      				to
-      				<a href="https://goo.gl/maps/SXCVYp46S9S2">
-      					Nurture Kids Warm Springs
-      				</a>
-      				by July 9th.
-      			</p>
-      			<p>
-      				The camp is $250.00 without lunch and $330.00 with lunch.
-      			</p>
-      		</div>
-        </div>
-        <div class="column is-5 is-offset-2 has-text-centered">
-          <h4 class="title is-4 has-text-centered">
-            Genius Kids
-          </h4>
-      		<p>
-            Registration for the Genius Kids camp is coming soon!
-          </p>
-        </div>
-      </div>
-    </div>
+		<div class="container">
+			<div class="columns">
+				<div class="column is-5">
+					<h4 class="title is-4 has-text-centered">
+						Nurture Kids
+					</h4>
+					<div class="">
+						<h5 class="title is-5">
+							Step 1: Fill Out Student Information Form
+						</h5>
+						<p>
+							Fill out
+							<a
+								href="https://docs.google.com/forms/d/e/1FAIpQLSef-Z8XUCSDe_XGCZ6Lt2ZZui9RDS98ANA7ZL-A7REyLs87WQ/viewform?usp=sf_link">
+								this form</a>.
+						</p>
+					</div>
+					<br />
+					<div class="">
+						<h5 class="title is-5">
+							Step 2: Fill Out Nurture Kids Registration Packet
+						</h5>
+						<p>
+							Fill out
+							<a href="assets/Arduino-Robotics-Registration-Packet-2019.pdf">
+								this registration packet</a>.
+						</p>
+						<p>
+							The completed and signed physical packet may be dropped off at
+							<a href="https://goo.gl/maps/SXCVYp46S9S2">
+								46517 Mission Blvd, Fremont, CA 94539
+							</a>
+							<strong>
+								or
+							</strong>
+							you may email the completed and signed packet to
+							<code>camp@irvingtonrobotics.org</code>.
+						</p>
+					</div>
+					<br />
+					<div class="">
+						<h5 class="title is-5">
+							Step 3: Submit Tuition
+						</h5>
+						<p>
+							Submit a check payable to
+							<strong>
+								VipArya Inc.
+							</strong>
+							to
+							<a href="https://goo.gl/maps/SXCVYp46S9S2">
+								Nurture Kids Warm Springs
+							</a>
+							by July 9th.
+						</p>
+						<p>
+							The camp is $250.00 without lunch and $330.00 with lunch.
+						</p>
+					</div>
+				</div>
+				<div class="column is-5 is-offset-2 has-text-centered">
+					<h4 class="title is-4 has-text-centered">
+						Genius Kids
+					</h4>
+					<p>
+						Registration for the Genius Kids camp is coming soon!
+					</p>
+				</div>
+			</div>
+		</div>
 	</section>
 	<br />
 	<footer class="footer is-branded has-text-white">
