--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<meta property="og:type" content="website" />
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.min.css" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<link href="css/index.css" rel="stylesheet">
 	</link>
 	</link>
@@ -27,14 +28,6 @@
 					<a class="navbar-item" href="#">
 						<img src="img/logo-white.svg" style="height: 12.09px" />
 					</a>
-					<button class="button navbar-burger" id="mainburger">
-						<span>
-						</span>
-						<span>
-						</span>
-						<span>
-						</span>
-					</button>
 				</div>
 				<div class="navbar-menu" id="mainmenu">
 					<div class="navbar-end">
@@ -148,7 +141,7 @@
 		<div class="container has-text-white">
 			<div class="columns is-vcentered">
 				<div class="column">
-					<img src="img/flyer.jpg" width="500" />
+					<img data-enlargeable src="img/flyer.jpg" width="500" />
 				</div>
 				<div class="column">
 					<h1 class="title has-text-white">
@@ -194,7 +187,7 @@
 			<h1 class="title has-text-white">
 				Equipment Used
 			</h1>
-			<img src="img/equipment.jpg" width="300">
+			<img data-enlargeable src="img/equipment.jpg" width="300">
 			<br><br>
 			<div class="columns">
 				<div class="column">
