Rename genius kids to Warm Springs Genius Kids

--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
 									<p>Info: Expansion</p>
 								</div>
 								<div class="message-body">
-									Due to growing demand, we are partnering with Genius Kids to host a second summer camp in late
+									Due to growing demand, we are partnering with Warm Springs Genius Kids to host a second summer camp in late
 									July/August.
-									If you are interested in attending our summer camp at Genius Kids, please fill out
+									If you are interested in attending our summer camp at Warm Springs Genius Kids, please fill out
 									<strong><a
 											href="https://docs.google.com/forms/d/e/1FAIpQLScxV-VXymFFife2kt-7wyo42yYndOD0Si4KWvBQNk5erphwTg/viewform">
 											this student interest form</a></strong>.
@@ -443,8 +443,8 @@
 							</table>
 				</div>
 				<div class="column is-5 is-offset-2">
-					<h3 class="title is-4"> Genius Kids <h3>
-							Pricing for the Genius Kids camp is coming soon!
+					<h3 class="title is-4"> Warm Springs Genius Kids <h3>
+							Pricing for the Warm Springs Genius Kids camp is coming soon!
 				</div>
 			</div>
 		</div>
@@ -529,10 +529,10 @@
 				</div>
 				<div class="column is-5 is-offset-2 has-text-centered">
 					<h4 class="title is-4 has-text-centered">
-						Genius Kids
+						Warm Springs Genius Kids
 					</h4>
 					<p>
-						Registration for the Genius Kids camp is coming soon!
+						Registration for the Warm Springs Genius Kids camp is coming soon!
 					</p>
 				</div>
 			</div>
