Add Nuture Kids AM is full

--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
 									<p>Info: Expansion</p>
 								</div>
 								<div class="message-body">
+									Our Nurture Kids AM session is full. If you were planning on joining our AM session,
+									please contact us at <code>camp@irvingtonrobotics.org</code>, and we will see if we are able to make
+									accommodations.
+									<br/>
+									<br/>
 									Due to growing demand, we are partnering with Warm Springs Genius Kids to host a second summer camp in late
 									July/August.
 									If you are interested in attending our summer camp at Warm Springs Genius Kids, please fill out
