Add highlighted full sections under schedule

--- a/index.html
+++ b/index.html
@@ -380,22 +380,40 @@
 			<h2 class="subtitle">
 				Email <code>camp@irvingtonrobotics.org</code> if you have any questions.
 			</h2>
-			<table class="table is-hcentered is-striped is-hoverable">
+			<div class="columns">
+				<div class="column is-5">
+					<h3 class="title is-4"> Nurture Kids <h3>
+					<table class="table is-hcentered is-striped is-hoverable">
+						<tr>
+							<th> Session 1 </th>
+							<th> Session 2 </th>
+						</tr>
+						<tr>
+							<td class="is-danger">	9:00AM to 1:00PM	</td>
+							<td class="is-warning">	2:00PM to 5:00PM	</td>
+						</tr>
+					</table>
+				</div>
+				<div class="column is-5 is-offset-2">
+					<h3 class="title is-4"> Warm Springs Genius Kids <h3>
+					<table class="table is-hcentered is-striped is-hoverable">
+						<tr>
+							<th> Session 1 </th>
+							<th> Session 2 </th>
+						</tr>
+						<tr>
+							<td class="is-success">	9:00AM to 1:00PM	</td>
+							<td class="is-success">	2:00PM to 5:00PM	</td>
+						</tr>
+					</table>
+				</div>
+			</div>
+			<table class="table is-hcentered is-striped is-bordered">
 				<tr>
-					<th>
-						Session 1
-					</th>
-					<th>
-						Session 2
-					</th>
-				</tr>
-				<tr>
-					<td>
-						9:00AM to 1:00PM
-					</td>
-					<td>
-						2:00PM to 5:00PM
-					</td>
+					<th> Key: </th>
+					<td class="is-success"> Empty </td>
+					<td class="is-warning"> Filling up </td>
+					<td class="is-danger"> Full </td>
 				</tr>
 			</table>
 			<br />
