Add border on schedule tables

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 			<div class="columns">
 				<div class="column is-5">
 					<h3 class="title is-4"> Nurture Kids <h3>
-					<table class="table is-hcentered is-striped is-hoverable">
+					<table class="table is-hcentered is-striped is-hoverable is-bordered">
 						<tr>
 							<th> Session 1 </th>
 							<th> Session 2 </th>
@@ -396,7 +396,7 @@
 				</div>
 				<div class="column is-5 is-offset-2">
 					<h3 class="title is-4"> Warm Springs Genius Kids <h3>
-					<table class="table is-hcentered is-striped is-hoverable">
+					<table class="table is-hcentered is-striped is-hoverable is-bordered">
 						<tr>
 							<th> Session 1 </th>
 							<th> Session 2 </th>
