Hide the Genius Kids logo on mobile, where it interferes with quality

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 											this student interest form</a></strong>.
 									The dates, pricing, and other details will be released shortly.
 								</div>
-								<div class="corner-icon is-top-right">
+								<div class="corner-icon is-top-right is-hidden-mobile">
 									<img src="img/genius-kids.png" width=100 class="image-pop">
 								</div>
 							</article>
