--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 					<div class="column">
 						<div class="content has-text-justified">
 							<p>
-								Hi! I am a junior at Irvington High School, and head of this summer camp. Technology is influencing the
+								Hi! I am a rising senior at Irvington High School, and head of this summer camp. Technology is influencing the
 								world in amazing ways, and I want to get the next generation involved in this process. As a Taekwondo
 								and tennis instructor, I have been helping students reach their physical and mental potential for four
 								years. As a seasoned instructor, I wish to combine my teaching experience with my technological
@@ -306,7 +306,7 @@
 					<div class="column">
 						<div class="content has-text-justified">
 							<p>
-								Hi! I am a junior at Irvington High School. Through several years of developing and teaching successful
+								Hi, I am an upcoming senior at Irvington High School. Through several years of developing and teaching successful
 								coding and robotics projects, I have become professionally fluent in Arduino, Raspberry Pi, and Python.
 								Additionally, in an effort to spread my passion for robotics, I founded an international teaching
 								program that brought the LEGO Mindstorms framework to developing schools. I have become competent in
@@ -332,7 +332,7 @@
 					<div class="column">
 						<div class="content has-text-justified">
 							<p>
-								Hi! My name is Patrick Ding and I am currently a junior at Irvington High School. I have a lot of
+								Hi! I am an upcoming senior at Irvington High School. I have a lot of
 								experience with Arduino and C programming, having made many small projects and taken summer programs on
 								these topics myself. I plan to use the experiences I had as a student to make this year's Irvington
 								summer camp better than the programs I took. I am also adept at using Autodesk Inventor, an industry
@@ -344,25 +344,24 @@
 					</div>
 				</div>
 				<h4 class="title is-4 has-text-white">
-					Vasant Chalemcherla
+					Shrijani Vemulapally
 				</h4>
 				<div class="columns">
 					<figure class="column is-narrow">
 						<p class="image is-128x128 is-hcentered">
-							<img class="is-rounded" src="img/bios/vasant.jpg">
+							<img class="is-rounded" src="img/bios/shrijani.jpg">
 						</p>
 					</figure>
 					<div class="column">
 						<div class="content has-text-justified">
 							<p>
-								Hi, I’m Vasant and I am a senior at Irvington High School. Ever since fourth grade I’ve loved robots. I
-								enjoy building and watching how my work plays out. I participated in the FLL competition for three
-								years, FTC for one, and VEX Robotics for 3 years, where I am now. Through this extensive robotics
-								experience, 3D modeling and programming has become second nature for me. Envisioning, creating, and
-								building complex designs to complete robotics challenges has made me master all aspects of the design
-								process, and learn a lot about structural/mechanical principles. I hope to teach all I've learned in my
-								robotics experience to students in this summer camp! In my free time, I can be found reading novels,
-								listening to music, playing tennis, or playing Destiny 2.
+								Hi, I am a rising Junior at Irvington High School. I have been involved in robotics
+								for 3 years now. I did one year of Lego robotics and two years of VEX robotics. Additionally,
+								I made two mobile applications using app inventor and participated in International Competitions.
+								At the same time, I am also fluent in Java,and Robot C. The main reason I chose to do robotics is
+								because it is an application of all three types of engineering, software, mechanical, and
+								electronics, and through this summer camp I would like to give young kids a chance to experience
+								all the three types of engineering meshed into one discipline.
 							</p>
 						</div>
 					</div>
