Use Sergey (SSG) for shared html files in prep for multiple pages

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 	</title>
 	<meta property="og:title" content="Arduino Robotics Camp by Irvington Robotics" />
 	<meta property="og:type" content="website" />
-	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-	<link href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.0/css/bulma.min.css" rel="stylesheet">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<sergey-import src="common" />
 	<link href="css/index.css" rel="stylesheet">
 	</link>
 	</link>
@@ -561,21 +559,7 @@
 		</div>
 	</section>
 	<br />
-	<footer class="footer is-branded has-text-white">
-		<div class="content has-text-centered">
-			<h5 class="has-text-white">
-				Student Confidentiality
-			</h5>
-			<p>
-				All information, such as student names, addresses, emails, and etc., collected by Irvington Robotics through
-				this website, its constituent links, or in-person will be kept completely confidential unless written consent by
-				a parent or legal guardian is provided.
-			</p>
-			<p>
-				© 2019 Irvington Robotics Academy.
-			</p>
-		</div>
-	</footer>
+	<sergey-import src="footer" />
 	<script src="js/index.js">
 	</script>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
