--- a/_imports/instructorsLong.html
+++ b/_imports/instructorsLong.html
@@ -145,4 +145,32 @@
 			</div>
 		</div>
 	</div>
+	<h4 class="title is-4 has-text-white">
+		Yeiji Lee
+	</h4>
+	<div class="columns">
+		<figure class="column is-narrow">
+			<p class="image is-128x128 is-hcentered">
+				<img class="is-rounded" src="img/bios/yeiji.jpg">
+			</p>
+		</figure>
+		<div class="column">
+			<div class="content has-text-justified">
+				<p>
+					 Hi, I am a rising senior from Irvington High School. From my four
+					 years of experience in Irvington Robotics, I have gained considerable
+					 skills in CAD, build, automation, and etc. Because my love for robotics
+					 and technology was perpetrated with the help of my community, I only
+					 found it fitting to help children, who are just touching the surface
+					 of the wonders of STEM, to find their love for it as well. From my
+					 experience as an archery coach, STEMrichment volunteer, and a part-time
+					 tutor, I have worked with students of all ages to reach their full
+					 potential while giving them a fulfilling and enjoyable experience.
+					 Though I am never going to be the best engineer, I hope that our
+					 students will be inspired by their time spent at our Arduino Robotics
+					 Camp and used those experiences to further their future aspirations.
+				</p>
+			</div>
+		</div>
+	</div>
 </section>
