--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 			</h1>
 			<sergey-import src="instructorsMessage" />
 			<br>
-			<div class="columns">
+			<a class="columns is-hover-brighten" href="/about-instructors.html">
 				<div class="column">
 					<p class="image is-128x128 is-hcentered">
 						<img class="is-rounded" src="img/bios/ansh.jpg">
@@ -254,7 +254,22 @@
 						<img class="is-rounded" src="img/bios/shrijani.jpg">
 					</p>
 				</div>
-			</div>
+				<div class="column">
+					<p class="image is-128x128 is-hcentered">
+						<img class="is-rounded" src="img/bios/divyank.jpg">
+					</p>
+				</div>
+				<div class="column">
+					<p class="image is-128x128 is-hcentered">
+						<img class="is-rounded" src="img/bios/kanishk.jpg">
+					</p>
+				</div>
+				<div class="column">
+					<p class="image is-128x128 is-hcentered">
+						<img class="is-rounded" src="img/bios/yeiji.jpg">
+					</p>
+				</div>
+			</a>
 			<br />
 			<a class="button is-link is-large is-light" href="/about-instructors.html">
 				Meet the Instructors
