Fix outgoing 404 on paypal + Zhang not Zheng

--- a/index.html
+++ b/index.html
@@ -613,14 +613,14 @@
 						<p>
 							Submit a check payable to
 							<strong>
-								Geoffrey Zheng
+								Geoffrey Zhang
 							</strong>
 							to
 							<a href="https://goo.gl/maps/5R3cbwLVVvAr4WQz6">
 								Genius Kids Warm Springs
 							</a>
 							or PayPal to
-							<a href="paypal.me/irvingtonrobotics">
+							<a href="//paypal.me/irvingtonrobotics">
 								IrvingtonRobotics
 							</a>
 							by July 2nd.
